<resources>
    <string name="app_name">AndroidSOS</string>
    <string name="app_home_title">Game UI Selector Screen</string>
    <string name="str_draggable_ui">Drag Interface</string>
    <string name="str_touch_ui">Touch Interface</string>
    <string name="str_player_turn">Turn . . .</string>
    <string name="o_image_view">o_image_view</string>
    <string name="s_image_view">s_image_view</string>
    <string name="btn_o_play">O</string>
    <string name="btn_s_play">S</string>
    <string name="player_avatar">player_avatar</string>
    <string name="str_player_1_score">0</string>
    <string name="str_player_2_score">0</string>
    <string name="player1_id">Player 1</string>
    <string name="player2_id">Player 2</string>
    <string name="str_end_game_state">Game Over !</string>
</resources>