<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#78909C"
    tools:context=".view.SOSTouchUI">

    <Button
        android:id="@+id/btn_s"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/play_custom_button"
        android:text="@string/btn_s_play"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/btn_o"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_o"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/play_custom_button"
        android:text="@string/btn_o_play"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_s" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="501dp"
        app:layout_constraintGuide_percent="0.9" />

    <com.example.androidsos.view.SOSGameBoard
        android:id="@+id/sosGameBoard"
        android:layout_width="0dp"
        android:layout_height="396dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#78909C"
        app:boardColor="#FF6D00"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1_avatar"
        app:oColor="#FF0000"
        app:sColor="#0000FF"
        app:winningLineColor="#FF9800"
        app:winningLineColor2="#FFEB3B" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="550dp" />

    <ImageView
        android:id="@+id/p1_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/player_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamer"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/p2_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/player_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teacher"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_player_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_player_turn"
        android:textColor="#4E342E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/p2_avatar"
        app:layout_constraintStart_toEndOf="@+id/p1_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_player_1_score"
        android:textColor="#4E342E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1_avatar" />

    <TextView
        android:id="@+id/p2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/str_player_2_score"
        android:textColor="#4527A0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2_avatar" />

    <TextView
        android:id="@+id/txt_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_end_game_state"
        android:textAllCaps="true"
        android:textColor="#EEFF41"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/p2_score"
        app:layout_constraintStart_toEndOf="@+id/p1_score"
        app:layout_constraintTop_toBottomOf="@+id/txt_player_turn" />

</androidx.constraintlayout.widget.ConstraintLayout>